--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             max-width: 1200px;
             margin: 0 auto;
             padding: 20px;
-            padding-bottom: 80px; /* Adjusted to accommodate smaller footer */
+            padding-bottom: 20px; /* Adjusted to accommodate smaller footer */
             box-sizing: border-box; /* Include padding in total height */
         }
         header {
@@ -110,6 +110,7 @@
             border-radius: 5px;
             z-index: 1;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            margin-bottom: 20px; /* Add space between popouts and footer */
         }
         .property:hover .property-info {
             display: block;
