--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
             <a href="SocialsEvents.html">Socials & Events</a>
         </div>
     </header>
-<div class="container">
+    <div class="container">
         <section>
             <div class="property" onclick="togglePropertyInfo(this)">
                 <img src="PropertyPics/h1.jpg" alt="Property 1">
@@ -151,10 +151,8 @@
                     <p>Location: Property 1 Location</p>
                     <p>Price: $X</p>
                     <p>More information about Property 1.</p>
-                    <a href="Properties/property1.html">See More</a>
                 </div>
             </div>
-            <!-- Repeat the above div for each property -->
             <div class="property" onclick="togglePropertyInfo(this)">
                 <img src="PropertyPics/h2.jpg" alt="Property 2">
                 <div class="property-info">
@@ -162,7 +160,6 @@
                     <p>Location: Property 2 Location</p>
                     <p>Price: $Y</p>
                     <p>More information about Property 2.</p>
-                    <a href="Properties/property2.html">See More</a>
                 </div>
             </div>
             <div class="property" onclick="togglePropertyInfo(this)">
@@ -172,7 +169,6 @@
                     <p>Location: Property 3 Location</p>
                     <p>Price: $Z</p>
                     <p>More information about Property 3.</p>
-                    <a href="Properties/property3.html">See More</a>
                 </div>
             </div>
             <div class="property" onclick="togglePropertyInfo(this)">
@@ -182,7 +178,6 @@
                     <p>Location: Property 4 Location</p>
                     <p>Price: $W</p>
                     <p>More information about Property 4.</p>
-                    <a href="Properties/property4.html">See More</a>
                 </div>
             </div>
             <div class="property" onclick="togglePropertyInfo(this)">
@@ -192,7 +187,6 @@
                     <p>Location: Property 5 Location</p>
                     <p>Price: $V</p>
                     <p>More information about Property 5.</p>
-                    <a href="Properties/property5.html">See More</a>
                 </div>
             </div>
             <div class="property" onclick="togglePropertyInfo(this)">
@@ -202,7 +196,6 @@
                     <p>Location: Property 6 Location</p>
                     <p>Price: $U</p>
                     <p>More information about Property 6.</p>
-                    <a href="Properties/property6.html">See More</a>
                 </div>
             </div>
             <div class="property" onclick="togglePropertyInfo(this)">
@@ -212,7 +205,6 @@
                     <p>Location: Property 7 Location</p>
                     <p>Price: $T</p>
                     <p>More information about Property 7.</p>
-                    <a href="Properties/property7.html">See More</a>
                 </div>
             </div>
             <div class="property" onclick="togglePropertyInfo(this)">
@@ -222,7 +214,6 @@
                     <p>Location: Property 8 Location</p>
                     <p>Price: $S</p>
                     <p>More information about Property 8.</p>
-                    <a href="Properties/property8.html">See More</a>
                 </div>
             </div>
             <div class="property" onclick="togglePropertyInfo(this)">
@@ -232,7 +223,6 @@
                     <p>Location: Property 9 Location</p>
                     <p>Price: $R</p>
                     <p>More information about Property 9.</p>
-                    <a href="Properties/property9.html">See More</a>
                 </div>
             </div>
         </section>
@@ -251,7 +241,7 @@
 
         function adjustFooterMargin() {
             var footerHeight = document.getElementById('mainFooter').offsetHeight;
-            document.getElementById('mainHeader').style.marginBottom = footerHeight + 'px';
+            document.getElementById('mainHeader').style.marginBottom = footerHeight + 20 + 'px';
         }
     </script>
 </body>
