--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             max-width: 1200px;
             margin: 0 auto;
             padding: 20px;
-            padding-bottom: 20px; /* Adjusted to accommodate smaller footer */
+            padding-bottom: 80px; /* Adjusted to accommodate smaller footer */
             box-sizing: border-box; /* Include padding in total height */
         }
         header {
@@ -110,7 +110,6 @@
             border-radius: 5px;
             z-index: 1;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            margin-bottom: 20px; /* Add space between popouts and footer */
         }
         .property:hover .property-info {
             display: block;
@@ -142,7 +141,7 @@
             <a href="SocialsEvents.html">Socials & Events</a>
         </div>
     </header>
-    <div class="container">
+<div class="container">
         <section>
             <div class="property" onclick="togglePropertyInfo(this)">
                 <img src="PropertyPics/h1.jpg" alt="Property 1">
@@ -151,8 +150,10 @@
                     <p>Location: Property 1 Location</p>
                     <p>Price: $X</p>
                     <p>More information about Property 1.</p>
+                    <a href="Properties/property1.html">See More</a>
                 </div>
             </div>
+            <!-- Repeat the above div for each property -->
             <div class="property" onclick="togglePropertyInfo(this)">
                 <img src="PropertyPics/h2.jpg" alt="Property 2">
                 <div class="property-info">
@@ -160,6 +161,7 @@
                     <p>Location: Property 2 Location</p>
                     <p>Price: $Y</p>
                     <p>More information about Property 2.</p>
+                    <a href="Properties/property2.html">See More</a>
                 </div>
             </div>
             <div class="property" onclick="togglePropertyInfo(this)">
@@ -169,6 +171,7 @@
                     <p>Location: Property 3 Location</p>
                     <p>Price: $Z</p>
                     <p>More information about Property 3.</p>
+                    <a href="Properties/property3.html">See More</a>
                 </div>
             </div>
             <div class="property" onclick="togglePropertyInfo(this)">
@@ -178,6 +181,7 @@
                     <p>Location: Property 4 Location</p>
                     <p>Price: $W</p>
                     <p>More information about Property 4.</p>
+                    <a href="Properties/property4.html">See More</a>
                 </div>
             </div>
             <div class="property" onclick="togglePropertyInfo(this)">
@@ -187,6 +191,7 @@
                     <p>Location: Property 5 Location</p>
                     <p>Price: $V</p>
                     <p>More information about Property 5.</p>
+                    <a href="Properties/property5.html">See More</a>
                 </div>
             </div>
             <div class="property" onclick="togglePropertyInfo(this)">
@@ -196,6 +201,7 @@
                     <p>Location: Property 6 Location</p>
                     <p>Price: $U</p>
                     <p>More information about Property 6.</p>
+                    <a href="Properties/property6.html">See More</a>
                 </div>
             </div>
             <div class="property" onclick="togglePropertyInfo(this)">
@@ -205,6 +211,7 @@
                     <p>Location: Property 7 Location</p>
                     <p>Price: $T</p>
                     <p>More information about Property 7.</p>
+                    <a href="Properties/property7.html">See More</a>
                 </div>
             </div>
             <div class="property" onclick="togglePropertyInfo(this)">
@@ -214,6 +221,7 @@
                     <p>Location: Property 8 Location</p>
                     <p>Price: $S</p>
                     <p>More information about Property 8.</p>
+                    <a href="Properties/property8.html">See More</a>
                 </div>
             </div>
             <div class="property" onclick="togglePropertyInfo(this)">
@@ -223,6 +231,7 @@
                     <p>Location: Property 9 Location</p>
                     <p>Price: $R</p>
                     <p>More information about Property 9.</p>
+                    <a href="Properties/property9.html">See More</a>
                 </div>
             </div>
         </section>
@@ -241,7 +250,7 @@
 
         function adjustFooterMargin() {
             var footerHeight = document.getElementById('mainFooter').offsetHeight;
-            document.getElementById('mainHeader').style.marginBottom = footerHeight + 20 + 'px';
+            document.getElementById('mainHeader').style.marginBottom = footerHeight + 'px';
         }
     </script>
 </body>
