--- a/AboutUs.html
+++ b/AboutUs.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Us</title>
+    <title>Welcome</title>
     <style>
         /* Add your CSS styles here */
         body {
@@ -33,21 +33,42 @@
             border-radius: 50%; /* Make the image round */
             margin-bottom: 20px;
         }
+        .button-container {
+            display: flex;
+            justify-content: center;
+            margin-top: 20px;
+        }
+        .button-container a {
+            display: inline-block;
+            margin: 0 10px;
+            padding: 10px 20px;
+            background-color: #333;
+            color: #fff;
+            text-decoration: none;
+            border-radius: 5px;
+            transition: background-color 0.3s ease;
+        }
+        .button-container a:hover {
+            background-color: #555;
+        }
     </style>
 </head>
 <body>
     <header>
-        <h1>About Us</h1>
+        <h1>Welcome</h1>
     </header>
     <div class="container">
         <div class="realtor-info">
-            <img src="placeholder_headshot.jpg" alt="Realtor Headshot">
-            <h2>John Doe</h2>
+            <img src="ruth_headshot.jpg" alt="Realtor Ruth's Headshot">
+            <h2>Ruth</h2>
             <p>Realtor</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam in purus eu felis placerat consectetur. Proin nec justo id mi eleifend euismod non vitae quam. Sed ac suscipit sapien. Nulla facilisi. Donec vehicula nisi nec justo finibus, vitae rutrum quam condimentum.</p>
-            <p>Curabitur consequat eros vel velit rutrum, eget varius nisl fringilla. Integer efficitur auctor purus, ac eleifend eros condimentum vel. Suspendisse potenti. Morbi nec odio et magna placerat egestas. Sed ut metus tristique, laoreet lectus a, bibendum tortor. Quisque ut purus arcu.</p>
+            <p>Welcome to our real estate website! I'm Ruth, your dedicated realtor, here to assist you with all your real estate needs.</p>
+            <p>Are you considering a vacation or looking for properties in Arkansas? Arkansas offers beautiful landscapes, friendly communities, and a variety of recreational activities for all ages.</p>
+        </div>
+        <div class="button-container">
+            <a href="LittleRockProperties.html">Little Rock</a>
+            <a href="NorthLittleRockProperties.html">North Little Rock</a>
         </div>
     </div>
 </body>
 </html>
-
