--- a/AboutUs.html
+++ b/AboutUs.html
@@ -59,7 +59,7 @@
     </header>
     <div class="container">
         <div class="realtor-info">
-            <img src="ruth_headshot.jpg" alt="Realtor Ruth's Headshot">
+            <img src="OtherPics/ruth_headshot.jpg" alt="Realtor Ruth's Headshot">
             <h2>Ruth</h2>
             <p>Realtor</p>
             <p>Welcome to our real estate website! I'm Ruth, your dedicated realtor, here to assist you with all your real estate needs.</p>
