--- a/index.html
+++ b/index.html
@@ -3,246 +3,72 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Real Estate Agency</title>
+    <title>Welcome</title>
     <style>
         /* Add your CSS styles here */
         body {
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #f0f0f0; /* Updated background color */
+            background-color: #f4f4f4;
             color: #333;
-            min-height: 100vh;
-            position: relative;
         }
         .container {
-            max-width: 1200px;
+            max-width: 800px;
             margin: 0 auto;
             padding: 20px;
-            padding-bottom: 80px; /* Adjusted to accommodate smaller footer */
-            box-sizing: border-box; /* Include padding in total height */
         }
         header {
-            background-color: #333; /* Updated header background color */
+            background-color: #333;
             color: #fff;
-            padding: 10px;
-            display: flex;
-            justify-content: space-between; /* Align elements */
-            align-items: center;
-            position: relative; /* Relative position to adjust margin */
-            z-index: 1000; /* Ensure it's above other content */
-        }
-        .header-buttons {
-            display: flex;
-        }
-        .header-buttons a {
-            margin-right: 20px; /* Add spacing between buttons */
-            color: #fff;
-            text-decoration: none;
-            transition: color 0.3s ease;
-        }
-        .header-buttons a:hover {
-            color: #ddd;
-        }
-        .contact-info {
-            text-align: center; /* Align contact info to the center */
-            background-color: #333; /* Updated footer background color */
-            color: #fff;
-            padding: 10px;
-            position: relative; /* Relative position to adjust margin */
-            z-index: 1; /* Ensure it's above other content */
-        }
-        nav {
+            padding: 10px 0;
             text-align: center;
-            margin-top: 60px; /* Adjusted to provide space below header */
         }
-        nav a {
+        .realtor-info {
+            text-align: center;
+            margin-top: 30px;
+        }
+        .realtor-info img {
+            width: 200px; /* Adjust size as needed */
+            border-radius: 50%; /* Make the image round */
+            margin-bottom: 20px;
+        }
+        .button-container {
+            display: flex;
+            justify-content: center;
+            margin-top: 20px;
+        }
+        .button-container a {
             display: inline-block;
             margin: 0 10px;
-            color: #333;
-            text-decoration: none;
             padding: 10px 20px;
-            background-color: #fff;
-            border-radius: 5px;
-            transition: background-color 0.3s ease;
-        }
-        nav a:hover {
-            background-color: #ddd;
-        }
-        section {
-            margin-top: 20px; /* Adjusted to provide space below navigation */
-            display: grid;
-            grid-template-columns: repeat(3, 1fr); /* 3 columns */
-            gap: 20px; /* Gap between items */
-            justify-content: space-evenly; /* Center items horizontally */
-        }
-        .property {
-            position: relative;
-            border: 1px solid #ddd;
-            border-radius: 5px;
-            background-color: #fff;
-            padding: 10px;
-            transition: box-shadow 0.3s ease;
-            cursor: pointer;
-        }
-        .property:hover {
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        }
-        .property img {
-            width: 100%;
-            border-radius: 5px;
-            margin-bottom: 10px;
-            transition: transform 0.3s ease;
-        }
-        .property:hover img {
-            transform: scale(1.1);
-        }
-        .property p {
-            font-size: 14px;
-            line-height: 1.4;
-        }
-        .property-info {
-            display: none;
-            position: absolute;
-            background-color: #fff;
-            padding: 10px;
-            border: 1px solid #ddd;
-            border-radius: 5px;
-            z-index: 1;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        }
-        .property:hover .property-info {
-            display: block;
-        }
-        .property-info h2 {
-            margin-top: 0;
-        }
-        .property-info a {
-            display: block;
-            margin-top: 10px;
-            text-align: center;
-            color: #fff;
             background-color: #333;
-            padding: 5px 10px;
+            color: #fff;
             text-decoration: none;
             border-radius: 5px;
             transition: background-color 0.3s ease;
         }
-        .property-info a:hover {
+        .button-container a:hover {
             background-color: #555;
         }
     </style>
 </head>
 <body>
-    <header id="mainHeader">
-        <div class="header-buttons">
-            <a href="contact.html">Contact Me</a>
-            <a href="AboutUs.html">About V</a>
-            <a href="SocialsEvents.html">Socials & Events</a>
-        </div>
+    <header>
+        <h1>Welcome</h1>
     </header>
-<div class="container">
-        <section>
-            <div class="property" onclick="togglePropertyInfo(this)">
-                <img src="PropertyPics/h1.jpg" alt="Property 1">
-                <div class="property-info">
-                    <h2>Property 1</h2>
-                    <p>Location: Property 1 Location</p>
-                    <p>Price: $X</p>
-                    <p>More information about Property 1.</p>
-                    <a href="Properties/property1.html">See More</a>
-                </div>
-            </div>
-            <!-- Repeat the above div for each property -->
-            <div class="property" onclick="togglePropertyInfo(this)">
-                <img src="PropertyPics/h2.jpg" alt="Property 2">
-                <div class="property-info">
-                    <h2>Property 2</h2>
-                    <p>Location: Property 2 Location</p>
-                    <p>Price: $Y</p>
-                    <p>More information about Property 2.</p>
-                    <a href="Properties/property2.html">See More</a>
-                </div>
-            </div>
-            <div class="property" onclick="togglePropertyInfo(this)">
-                <img src="PropertyPics/h3.jpg" alt="Property 3">
-                <div class="property-info">
-                    <h2>Property 3</h2>
-                    <p>Location: Property 3 Location</p>
-                    <p>Price: $Z</p>
-                    <p>More information about Property 3.</p>
-                    <a href="Properties/property3.html">See More</a>
-                </div>
-            </div>
-            <div class="property" onclick="togglePropertyInfo(this)">
-                <img src="PropertyPics/h4.jpg" alt="Property 4">
-                <div class="property-info">
-                    <h2>Property 4</h2>
-                    <p>Location: Property 4 Location</p>
-                    <p>Price: $W</p>
-                    <p>More information about Property 4.</p>
-                    <a href="Properties/property4.html">See More</a>
-                </div>
-            </div>
-            <div class="property" onclick="togglePropertyInfo(this)">
-                <img src="PropertyPics/h5.jpg" alt="Property 5">
-                <div class="property-info">
-                    <h2>Property 5</h2>
-                    <p>Location: Property 5 Location</p>
-                    <p>Price: $V</p>
-                    <p>More information about Property 5.</p>
-                    <a href="Properties/property5.html">See More</a>
-                </div>
-            </div>
-            <div class="property" onclick="togglePropertyInfo(this)">
-                <img src="PropertyPics/h6.jpg" alt="Property 6">
-                <div class="property-info">
-                    <h2>Property 6</h2>
-                    <p>Location: Property 6 Location</p>
-                    <p>Price: $U</p>
-                    <p>More information about Property 6.</p>
-                    <a href="Properties/property6.html">See More</a>
-                </div>
-            </div>
-            <div class="property" onclick="togglePropertyInfo(this)">
-                <img src="PropertyPics/h7.jpg" alt="Property 7">
-                <div class="property-info">
-                    <h2>Property 7</h2>
-                    <p>Location: Property 7 Location</p>
-                    <p>Price: $T</p>
-                    <p>More information about Property 7.</p>
-                    <a href="Properties/property7.html">See More</a>
-                </div>
-            </div>
-            <div class="property" onclick="togglePropertyInfo(this)">
-                <img src="PropertyPics/h8.jpg" alt="Property 8">
-                <div class="property-info">
-                    <h2>Property 8</h2>
-                    <p>Location: Property 8 Location</p>
-                    <p>Price: $S</p>
-                    <p>More information about Property 8.</p>
-                    <a href="Properties/property8.html">See More</a>
-                </div>
-            </div>
-            <div class="property" onclick="togglePropertyInfo(this)">
-                <img src="PropertyPics/h9.jpg" alt="Property 9">
-                <div class="property-info">
-                    <h2>Property 9</h2>
-                    <p>Location: Property 9 Location</p>
-                    <p>Price: $R</p>
-                    <p>More information about Property 9.</p>
-                    <a href="Properties/property9.html">See More</a>
-                </div>
-            </div>
-        </section>
+    <div class="container">
+        <div class="realtor-info">
+            <img src="ruth_headshot.jpg" alt="Realtor Ruth's Headshot">
+            <h2>Ruth</h2>
+            <p>Realtor</p>
+            <p>Welcome to our real estate website! I'm Ruth, your dedicated realtor, here to assist you with all your real estate needs.</p>
+            <p>Are you considering a vacation or looking for properties in Arkansas? Arkansas offers beautiful landscapes, friendly communities, and a variety of recreational activities for all ages.</p>
+        </div>
+        <div class="button-container">
+            <a href="LittleRockProperties.html">Little Rock</a>
+            <a href="NorthLittleRockProperties.html">North Little Rock</a>
+        </div>
     </div>
-
-    <script>
-        function togglePropertyInfo(property) {
-            property.classList.toggle('active');
-            adjustFooterMargin();
-        }
-
-    </script>
 </body>
 </html>
