--- a/LittleRockProperties.html
+++ b/LittleRockProperties.html
@@ -24,16 +24,15 @@
         }
         header, footer {
             height: 0.5in; /* Half inch height */
-            width: calc(100% - 40px); /* Same width as container */
-            max-width: 1200px; /* Maximum width */
-            margin: 0 auto; /* Center horizontally */
+            width: 100%; /* Extend to full width */
             background-color: #333; /* Updated header and footer background color */
             color: #fff;
             padding: 10px;
             display: flex;
             justify-content: space-between; /* Align elements */
             align-items: center;
-            position: relative; /* Relative position to adjust margin */
+            position: fixed; /* Fixed position for header and footer */
+            left: 0; /* Align to the left */
             z-index: 1000; /* Ensure it's above other content */
         }
         .header-buttons {
@@ -50,7 +49,13 @@
         }
         .contact-info {
             text-align: center; /* Align contact info to the center */
-            padding: 5px;
+            background-color: #333; /* Updated footer background color */
+            color: #fff;
+            padding: 10px;
+            position: fixed; /* Fixed position for footer */
+            bottom: 0; /* Align to the bottom */
+            left: 0; /* Align to the left */
+            width: 100%; /* Extend to full width */
         }
         nav {
             text-align: center;
@@ -70,7 +75,8 @@
             background-color: #ddd;
         }
         section {
-            margin-top: 20px; /* Adjusted to provide space below navigation */
+            margin-top: 90px; /* Adjusted to provide space below header and above footer */
+            margin-bottom: 90px; /* Adjusted to provide space above footer */
             display: grid;
             grid-template-columns: repeat(3, 1fr); /* 3 columns */
             gap: 20px; /* Gap between items */
