--- a/NorthLittleRockProperties.html
+++ b/NorthLittleRockProperties.html
@@ -22,14 +22,17 @@
             padding-bottom: 80px; /* Adjusted to accommodate smaller footer */
             box-sizing: border-box; /* Include padding in total height */
         }
-        header {
-            background-color: #333; /* Updated header background color */
+        header, footer {
+            height: 0.5in; /* Half inch height */
+            width: 100%; /* Extend to full width */
+            background-color: #333; /* Updated header and footer background color */
             color: #fff;
             padding: 10px;
             display: flex;
             justify-content: space-between; /* Align elements */
             align-items: center;
-            position: relative; /* Relative position to adjust margin */
+            position: fixed; /* Fixed position for header and footer */
+            left: 0; /* Align to the left */
             z-index: 1000; /* Ensure it's above other content */
         }
         .header-buttons {
@@ -49,8 +52,10 @@
             background-color: #333; /* Updated footer background color */
             color: #fff;
             padding: 10px;
-            position: relative; /* Relative position to adjust margin */
-            z-index: 1; /* Ensure it's above other content */
+            position: fixed; /* Fixed position for footer */
+            bottom: 0; /* Align to the bottom */
+            left: 0; /* Align to the left */
+            width: 100%; /* Extend to full width */
         }
         nav {
             text-align: center;
@@ -70,7 +75,8 @@
             background-color: #ddd;
         }
         section {
-            margin-top: 20px; /* Adjusted to provide space below navigation */
+            margin-top: 90px; /* Adjusted to provide space below header and above footer */
+            margin-bottom: 90px; /* Adjusted to provide space above footer */
             display: grid;
             grid-template-columns: repeat(3, 1fr); /* 3 columns */
             gap: 20px; /* Gap between items */
@@ -182,6 +188,26 @@
                     <p>Price: $W</p>
                     <p>More information about Property 4.</p>
                     <a href="Properties/property4.html">See More</a>
+                </div>
+            </div>
+            <div class="property" onclick="togglePropertyInfo(this)">
+                <img src="PropertyPics/h5.jpg" alt="Property 5">
+                <div class="property-info">
+                    <h2>Property 5</h2>
+                    <p>Location: Property 5 Location</p>
+                    <p>Price: $V</p>
+                    <p>More information about Property 5.</p>
+                    <a href="Properties/property5.html">See More</a>
+                </div>
+            </div>
+            <div class="property" onclick="togglePropertyInfo(this)">
+                <img src="PropertyPics/h6.jpg" alt="Property 6">
+                <div class="property-info">
+                    <h2>Property 6</h2>
+                    <p>Location: Property 6 Location</p>
+                    <p>Price: $U</p>
+                    <p>More information about Property 6.</p>
+                    <a href="Properties/property6.html">See More</a>
                 </div>
             </div>
         </section>
