--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
         <div class="button-container">
             <a href="LittleRockProperties.html">Little Rock</a>
             <a href="NorthLittleRockProperties.html">North Little Rock</a>
+            <a href="https://calendly.com/">Chat Directly</a> 
         </div>
     </div>
 </body>
