--- a/index.html
+++ b/index.html
@@ -66,8 +66,7 @@
             <p>Are you considering a vacation or looking for properties in Arkansas? Arkansas offers beautiful landscapes, friendly communities, and a variety of recreational activities for all ages.</p>
         </div>
         <div class="button-container">
-            <a href="LittleRockProperties.html">Little Rock</a>
-            <a href="NorthLittleRockProperties.html">North Little Rock</a>
+            <a href="LittleRockProperties.html">View Properties</a>
             <a href="https://calendly.com/">Chat Directly</a> 
         </div>
     </div>
