--- a/index.html
+++ b/index.html
@@ -60,9 +60,8 @@
     <div class="container">
         <div class="realtor-info">
             <img src="ruth_headshot.jpg" alt="Realtor Ruth's Headshot">
-            <h2>Ruth</h2>
-            <p>Realtor</p>
-            <p>Welcome to our real estate website! I'm Ruth, your dedicated realtor, here to assist you with all your real estate needs.</p>
+            <h2>Ruth Vasquez</h2>
+            <p>Welcome to our real estate website! I'm Ruth, your dedicated hostess, here to assist you with all your short term rental needs.</p>
             <p>Are you considering a vacation or looking for properties in Arkansas? Arkansas offers beautiful landscapes, friendly communities, and a variety of recreational activities for all ages.</p>
         </div>
         <div class="button-container">
