--- a/index.html
+++ b/index.html
@@ -68,6 +68,11 @@
             <a href="LittleRockProperties.html">View Properties</a>
             <a href="https://calendly.com/">Chat Directly</a> 
         </div>
+        <div>
+             <h2>Contact:</h2>
+            <p>Cell:(123)-456-7890</p>
+            <p>Email:ruthpublicemail@email.com</p>
+        </div>
     </div>
 </body>
 </html>
