--- a/index.html
+++ b/index.html
@@ -28,6 +28,11 @@
             text-align: center;
             margin-top: 30px;
         }
+
+        .realtor-contact {
+            text-align: center;
+            margin-top: 30px;
+        }
         .realtor-info img {
             width: 200px; /* Adjust size as needed */
             border-radius: 50%; /* Make the image round */
@@ -68,7 +73,7 @@
             <a href="LittleRockProperties.html">View Properties</a>
             <a href="https://calendly.com/">Chat Directly</a> 
         </div>
-        <div>
+        <div class="realtor-contact">
              <h2>Contact:</h2>
             <p>Cell:(123)-456-7890</p>
             <p>Email:ruthpublicemail@email.com</p>
