--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 </head>
 <body>
     <header>
-        <h1>Welcome</h1>
+        <h1>The V Places</h1>
     </header>
     <div class="container">
         <div class="realtor-info">
