--- a/LittleRockProperties.html
+++ b/LittleRockProperties.html
@@ -176,12 +176,12 @@
                     <h2>Property 3</h2>
                     <p>Location: Property 3 Location</p>
                     <p>Price: $Z</p>
-                    <p>More information about Property 3.</p>
-                    <a href="Properties/property3.html">See More</a>
+                    <p>More information about Property 3.</p>                    
+                    <a href="https://www.vrbo.com/4657269ha">VRBO</a>
                 </div>
             </div>
             <div class="property" onclick="togglePropertyInfo(this)">
-                <img src="PropertyPics/h4.jpg" alt="Property 4">
+                <img src="PropertyPics/RuthHouse1.avif" alt="Property 4">
                 <div class="property-info">
                     <h2>Property 4</h2>
                     <p>Location: Property 4 Location</p>
