--- a/LittleRockProperties.html
+++ b/LittleRockProperties.html
@@ -140,7 +140,7 @@
         }
         .page-links {
             text-align: center;
-            margin-bottom: 20px;
+            margin-top: 20px;
         }
         .page-links a {
             margin: 0 5px;
@@ -191,13 +191,17 @@
                 </div>
             </div>
         </section>
-    </div>
-    <footer class="contact-info" id="mainFooter">
         <div class="page-links">
             <a href="#page1">1</a>
             <a href="#page2">2</a>
             <a href="#page3">3</a>
         </div>
+    </div>
+    <footer class="contact-info" id="mainFooter">
+        <p>Email: example@example.com</p>
+        <p>Phone: 123-456-7890</p>
+        <p><a href="https://calendly.com/">Calendly</a></p>
+        <p>@BryanFendley</p>
     </footer>
     <script>
         function togglePropertyInfo(property) {
