--- a/LittleRockProperties.html
+++ b/LittleRockProperties.html
@@ -194,7 +194,7 @@
         <div class="page-links">
             <a href="#page1">1</a>
             <a href="#page2">2</a>
-            <a href="#page3">3</a>
+            <a href="LittleRockProperties2.html">3</a>
         </div>
     </div>
     <footer class="contact-info" id="mainFooter">
