--- a/LittleRockProperties2.html
+++ b/LittleRockProperties2.html
@@ -191,10 +191,10 @@
                 </div>
             </div>
         </section>
-        <div class="page-links">
-            <a href="#page1">1</a>
-            <a href="#page2">2</a>
-            <a href="#page3">3</a>
+      <div class="page-links">
+            <a href="LittleRockProperties1.html">1</a>
+            <a href="LittleRockProperties2.html">2</a>
+            <a href="LittleRockProperties3.html">3</a>
         </div>
     </div>
     <footer class="contact-info" id="mainFooter">
