--- a/LittleRockProperties3.html
+++ b/LittleRockProperties3.html
@@ -152,9 +152,9 @@
 <body>
     <header id="mainHeader">
         <div class="header-buttons">
-            <a href="contact.html">Contact Me</a>
+            <a href="index.html">Home</a>
             <a href="AboutUs.html">About V</a>
-            <a href="SocialsEvents.html">Socials & Events</a>
+            <a href="SocialsEvents.html">Events</a>
         </div>
     </header>
     <div class="container">
