--- a/LittleRockProperties1.html
+++ b/LittleRockProperties1.html
@@ -150,7 +150,7 @@
     </style>
 </head>
 <body>
-    <header id="mainHeader">
+    <header>
         <div class="header-buttons">
             <a href="index.html">Home</a>
             <a href="AboutUs.html">About V</a>
@@ -159,45 +159,20 @@
     </header>
     <div class="container">
         <section>
+            <!-- Property Items (Only three per page) -->
             <div class="property" onclick="togglePropertyInfo(this)">
-                <img src="PropertyPics/h1.jpg" alt="Property 1">
-                <div class="property-info">
-                    <h2>Property 1</h2>
-                    <p>Location: Property 1 Location</p>
-                    <p>Price: $X</p>
-                    <p>More information about Property 1.</p>
-                    <a href="Properties/property1.html">See More</a>
-                </div>
+                <!-- Property Image and Information -->
             </div>
-            <!-- Repeat the above div for each property -->
-            <div class="property" onclick="togglePropertyInfo(this)">
-                <img src="PropertyPics/h2.jpg" alt="Property 2">
-                <div class="property-info">
-                    <h2>Property 2</h2>
-                    <p>Location: Property 2 Location</p>
-                    <p>Price: $Y</p>
-                    <p>More information about Property 2.</p>
-                    <a href="Properties/property2.html">See More</a>
-                </div>
-            </div>
-            <div class="property" onclick="togglePropertyInfo(this)">
-                <img src="PropertyPics/RuthHouse1.avif" alt="Property 3">
-                <div class="property-info">
-                    <h2>Property 3</h2>
-                    <p>Location: Property 3 Location</p>
-                    <p>Price: $Z</p>
-                    <p>More information about Property 3.</p>                    
-                    <a href="https://www.vrbo.com/4657269ha">VRBO</a>
-                </div>
-            </div>
+            <!-- Repeat for other properties -->
         </section>
+        <!-- Pagination -->
         <div class="page-links">
             <a href="LittleRockProperties1.html">1</a>
             <a href="LittleRockProperties2.html">2</a>
             <a href="LittleRockProperties3.html">3</a>
         </div>
     </div>
-    <footer class="contact-info" id="mainFooter">
+    <footer class="contact-info">
         <p>Email: example@example.com</p>
         <p>Phone: 123-456-7890</p>
         <p><a href="https://calendly.com/">Calendly</a></p>
@@ -210,8 +185,8 @@
         }
 
         function adjustFooterMargin() {
-            var footerHeight = document.getElementById('mainFooter').offsetHeight;
-            document.getElementById('mainHeader').style.marginBottom = footerHeight + 'px';
+            var footerHeight = document.querySelector('footer').offsetHeight;
+            document.querySelector('header').style.marginBottom = footerHeight + 'px';
         }
     </script>
 </body>
