--- a/LittleRockProperties1.html
+++ b/LittleRockProperties1.html
@@ -19,11 +19,10 @@
             max-width: 1200px;
             margin: 0 auto;
             padding: 20px;
-            padding-bottom: 80px; /* Adjusted to accommodate smaller footer */
             box-sizing: border-box; /* Include padding in total height */
         }
         header, footer {
-            height: 0.5in; /* Half inch height */
+            height: 50px; /* Reduced footer height */
             width: 100%; /* Extend to full width */
             background-color: #333; /* Updated header and footer background color */
             color: #fff;
