--- a/LittleRockProperties2.html
+++ b/LittleRockProperties2.html
@@ -19,27 +19,26 @@
             max-width: 1200px;
             margin: 0 auto;
             padding: 20px;
-            padding-bottom: 80px; /* Adjusted to accommodate smaller footer */
             box-sizing: border-box; /* Include padding in total height */
         }
-        header, footer {
-            height: 0.5in; /* Half inch height */
-            width: 100%; /* Extend to full width */
-            background-color: #333; /* Updated header and footer background color */
+        header {
+            height: 50px;
+            width: 100%;
+            background-color: #333;
             color: #fff;
             padding: 10px;
             display: flex;
-            justify-content: space-between; /* Align elements */
+            justify-content: space-between;
             align-items: center;
-            position: fixed; /* Fixed position for header and footer */
-            left: 0; /* Align to the left */
-            z-index: 1000; /* Ensure it's above other content */
+            position: fixed;
+            left: 0;
+            z-index: 1000;
         }
         .header-buttons {
             display: flex;
         }
         .header-buttons a {
-            margin-right: 20px; /* Add spacing between buttons */
+            margin-right: 20px;
             color: #fff;
             text-decoration: none;
             transition: color 0.3s ease;
@@ -47,40 +46,12 @@
         .header-buttons a:hover {
             color: #ddd;
         }
-        .contact-info {
-            text-align: center; /* Align contact info to the center */
-            background-color: #333; /* Updated footer background color */
-            color: #fff;
-            padding: 10px;
-            position: fixed; /* Fixed position for footer */
-            bottom: 0; /* Align to the bottom */
-            left: 0; /* Align to the left */
-            width: 100%; /* Extend to full width */
-        }
-        nav {
-            text-align: center;
-            margin-top: 60px; /* Adjusted to provide space below header */
-        }
-        nav a {
-            display: inline-block;
-            margin: 0 10px;
-            color: #333;
-            text-decoration: none;
-            padding: 10px 20px;
-            background-color: #fff;
-            border-radius: 5px;
-            transition: background-color 0.3s ease;
-        }
-        nav a:hover {
-            background-color: #ddd;
-        }
         section {
-            margin-top: 90px; /* Adjusted to provide space below header and above footer */
-            margin-bottom: 90px; /* Adjusted to provide space above footer */
+            margin-top: 90px;
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); /* Dynamic columns */
-            gap: 20px; /* Gap between items */
-            justify-content: space-evenly; /* Center items horizontally */
+            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+            gap: 20px;
+            justify-content: space-evenly;
         }
         .property {
             position: relative;
@@ -96,7 +67,7 @@
         }
         .property img {
             max-width: 100%;
-            height: auto; /* Maintain aspect ratio */
+            height: auto;
             border-radius: 5px;
             margin-bottom: 10px;
             transition: transform 0.3s ease;
@@ -197,12 +168,6 @@
             <a href="LittleRockProperties3.html">3</a>
         </div>
     </div>
-    <footer class="contact-info" id="mainFooter">
-        <p>Email: example@example.com</p>
-        <p>Phone: 123-456-7890</p>
-        <p><a href="https://calendly.com/">Calendly</a></p>
-        <p>@BryanFendley</p>
-    </footer>
     <script>
         function togglePropertyInfo(property) {
             property.classList.toggle('active');
