--- a/AboutUs.html
+++ b/AboutUs.html
@@ -69,9 +69,9 @@
     <div class="container">
         <div class="header">
             <div class="header-buttons">
-                <a href="#">Home</a>
-                <a href="#">Contact</a>
-                <a href="#">Properties</a>
+                <a href="https://thevplaces.github.io/index.html">Home</a>
+                <a href="https://calendly.com/">Contact</a>
+                <a href="https://thevplaces.github.io/LittleRockProperties1.html">Properties</a>
             </div>
         </div>
         <h2 class="title">Meet Ruth - Your Dedicated Short-Term Rental Hostess</h2>
