--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     </header>
     <div class="container">
         <div class="realtor-info">
-            <img src="ruth_logo.jpg" alt="Realtor Ruth's Headshot">
+            <img src="ruth_logo.png" alt="Realtor Ruth's Headshot">
             <h2>Ruth Vasquez</h2>
             <p>I'm Ruth, your dedicated hostess, here to assist you with all your short term rental needs.</p>
             <p>Are you considering a vacation or looking for properties in Arkansas? Arkansas offers beautiful landscapes, friendly communities, and a variety of recreational activities for all ages.</p>
