--- a/index.html
+++ b/index.html
@@ -34,10 +34,11 @@
             margin-top: 30px;
         }
         .realtor-info img {
-            width: 200px; /* Adjust size as needed */
-            border-radius: 50%; /* Make the image round */
+            width: 100%; /* Set width to 100% to make it a full-sized square */
+            height: auto; /* Maintain aspect ratio */
             margin-bottom: 20px;
         }
+
         .button-container {
             display: flex;
             justify-content: center;
