--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
     <div class="container">
         <div class="realtor-info">
             <img src="PicturesGeneral/ruth_logo.png" alt="Realtor Ruth's Headshot">
-            <h2>Ruth Vasquez</h2>
-            <p>I'm Ruth, your dedicated hostess, here to assist you with all your short term rental needs.</p>
+            <h2>Ruth & Jamie Vasquez</h2>
+            <p>We are Ruth and Jamie, your dedicated hosts, here to assist you with all your short term rental needs.</p>
             <p>Are you considering a vacation or looking for properties in Arkansas? Arkansas offers beautiful landscapes, friendly communities, and a variety of recreational activities for all ages.</p>
         </div>
         <div class="button-container">
