--- a/index.html
+++ b/index.html
@@ -72,12 +72,7 @@
         </div>
         <div class="button-container">
             <a href="LittleRockProperties1.html">View Properties</a>
-            <a href="https://calendly.com/">Chat Directly</a> 
-        </div>
-        <div class="realtor-contact">
-             <h2>Contact:</h2>
-            <p>Cell:(123)-456-7890</p>
-            <p>Email:ruthpublicemail@email.com</p>
+            <a href="contact.html">Contact Us</a> <!-- Changed link to contact.html -->
         </div>
     </div>
 </body>
