--- a/LittleRockProperties1.html
+++ b/LittleRockProperties1.html
@@ -142,7 +142,7 @@
             </div>
             <!-- Repeat the above div for each property -->
             <div class="property" onclick="togglePropertyInfo(this)">
-                <img src="PropertyPics/h2.jpg" alt="Property 2">
+                <img src="PropertyPics/DowntownLittleRockBNB1Landing.webp" alt="Property 2">
                 <div class="property-info">
                     <h2>Property 2</h2>
                     <p>Location: Property 2 Location</p>
