--- a/LittleRockProperties1.html
+++ b/LittleRockProperties1.html
@@ -149,7 +149,7 @@
             </div>
             <!-- Property 3 -->
             <div class="property" onclick="togglePropertyInfo(this)">
-                <img src="PropertyPics/RuthHouse1.avif" alt="Property 3">
+                <img src="PropertyPics/DowntownLittleRockBNB3Landing.webp" alt="Property 3">
                 <div class="property-info">
                     <h2>Property 3</h2>
                     <p>Location: Property 3 Location</p>
